--- a/duck_exp/duck_exp/templates/duck_exp/base.html
+++ b/duck_exp/duck_exp/templates/duck_exp/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Duck Exp{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <div id="content">
