--- a/duck_exp/static/css/styles.css
+++ b/duck_exp/static/css/styles.css
@@ -1,26 +1,23 @@
 /* static/css/styles.css */
 .code-editor-output {
-  width: 100%; /* Set the output width to 100% */
   background-color: #1e1e1e; /* Example background color */
-  color: #abb2bf; /* Example text color */
+  color: white; /* Example text color */
   font-family: "Courier New", Courier, monospace;
-  font-size: 14px;
-  padding: 10px;
-  margin-top: 10px;
+  font-size: 11px;
+  margin-bottom: 20px;
+  margin-top: 53px;
   border: 1px solid #282c34; /* Example border color */
-  border-radius: 5px;
   white-space: pre-wrap;
-  width: 100%;
+  flex-shrink: 0; 
+  width: 500px; 
+  height: 300px;
+  align-self: flex-end;
 }
 
-/* static/css/styles.css */
-.editor-container {
-  display: flex;
-  flex-direction: column;
+.django-ace-editor {
+  width: 500px;
 }
 
-
-.code-editor-output {
-  width: 100%;
-  /* Add any additional styling as needed */
+.django-ace-toolbar {
+  display: none;
 }
