Some more styling

--- a/duck_exp/duck_code_editor/templates/duck_code_editor/code_editor.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/code_editor.html
@@ -1,5 +1,5 @@
 {% extends 'duck_exp/base.html' %} {% block content %}
-<div class="container" style="padding-bottom: 5px">
+<div class="container" style="padding-bottom: 5px; padding-top: 10px">
   <h2>Task {{task_number}}</h2>
   <b>{{ current_task.title }}:</b>{{current_task.description}}
 </div>
