Safe complexity feedback as well

--- a/duck_exp/duck_code_editor/templates/duck_code_editor/complexity_feedback.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/complexity_feedback.html
@@ -10,23 +10,23 @@
       <div class="likert-options">
         <label class="likert-option">
           <span class="likert-label">Very simple</span>
-          <input type="radio" name="complexity" value="1" />
+          <input type="radio" name="complexity" value="Very simple" />
         </label>
         <label class="likert-option">
           <span class="likert-label">Simple</span>
-          <input type="radio" name="complexity" value="2" />
+          <input type="radio" name="complexity" value="Simple" />
         </label>
         <label class="likert-option">
           <span class="likert-label">Neutral</span>
-          <input type="radio" name="complexity" value="3" />
+          <input type="radio" name="complexity" value="Neutral" />
         </label>
         <label class="likert-option">
           <span class="likert-label">Complex</span>
-          <input type="radio" name="complexity" value="4" />
+          <input type="radio" name="complexity" value="Complex" />
         </label>
         <label class="likert-option">
           <span class="likert-label">Very complex</span>
-          <input type="radio" name="complexity" value="5" />
+          <input type="radio" name="complexity" value="Very complex" />
         </label>
       </div>
     </div>
