--- a/duck_exp/duck_exp/templates/duck_exp/base.html
+++ b/duck_exp/duck_exp/templates/duck_exp/base.html
@@ -18,6 +18,7 @@
       type="text/css"
       href="{% static 'css/styles.css' %}"
     />
+    <script src="https://www.youtube.com/iframe_api"></script>
   </head>
   <body>
     <script
