--- a/duck_exp/duck_code_editor/templates/duck_code_editor/break.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/break.html
@@ -8,7 +8,7 @@
   <iframe
     width="560"
     height="315"
-    src="https://www.youtube.com/embed/8o4oNZdQ0M0?si=RKPqYYeQgcmZDDl1"
+    src="https://www.youtube.com/embed/JIjV73k3AxM?si=_7L3X37IOp_uvSuJ"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
