--- a/duck_exp/duck_code_editor/templates/duck_code_editor/survey.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/survey.html
@@ -54,6 +54,9 @@
           <input type="radio" name="survey_q2" value="Very complex" required/>
         </label>
       </div>
+
+      <p>Any comments or suggestions?</p>
+      <textarea name="survey_q3" rows="4" cols="50" style="margin-bottom: 30px;"></textarea>
     </div>
 
     <button class="btn btn-secondary" style="display: block" type="submit">
