--- a/duck_exp/duck_code_editor/templates/duck_code_editor/code_editor.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/code_editor.html
@@ -1,21 +1,36 @@
 {% extends 'duck_exp/base.html' %} {% block content %}
-<div class="container" style="padding-bottom: 5px; padding-top: 10px; display: flex; align-items: center;">
-  <div style="flex: 1;">
-      {%if task_number == 0%}
-      <h2>Test Task</h2>
-      {%else%}
-      <h2>Task {{ task_number }}</h2>
-      {%endif%}
-      
-      <b>{{ current_task.title }}:</b> {{ current_task.description }}
+<div
+  class="container"
+  style="
+    padding-bottom: 5px;
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+  "
+>
+  <div style="flex: 1">
+    {%if task_number == 0%}
+    <h2>PART 1: Test Task</h2>
+    <p>
+      This first task is meant to familiarise yourself with the format of the
+      debugging tasks throughout this form.
+    </p>
+    <p><b>Simply debug this task as you normally would to get warmed up.</b></p>
+    {%else%}
+    <h2>Task {{ task_number }}</h2>
+   
+    {%endif%}
+
+    <b>{{ current_task.title | safe }}:</b> {{ current_task.description |safe }}
   </div>
   {% if duck %}
-      <img src="https://media.istockphoto.com/id/1127302688/vector/yellow-duck-icon.jpg?s=612x612&w=0&k=20&c=VD0bPGAhprT2sZFtUpHin-60ZmrvkrprYnEoeDddthY=" 
-           alt="Description of the image"
-           style="width: 100px; margin-left: 10px; margin-right: 200px;">
+  <img
+    src="https://media.istockphoto.com/id/1127302688/vector/yellow-duck-icon.jpg?s=612x612&w=0&k=20&c=VD0bPGAhprT2sZFtUpHin-60ZmrvkrprYnEoeDddthY="
+    alt="Description of the image"
+    style="width: 100px; margin-left: 10px; margin-right: 200px"
+  />
   {% endif %}
 </div>
-
 
 <div class="container">
   <div class="row">
@@ -44,7 +59,7 @@
           value="true"
           class="btn btn-secondary"
         >
-          Next Task
+          Next
         </button>
       </form>
     </div>
@@ -65,7 +80,6 @@
         {% endif %}
       </div>
     </div>
-
   </div>
 </div>
 
