--- a/duck_exp/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
@@ -23,7 +23,7 @@
   <p>
     We would now like to ask you to use rubber duck debugging in the final task. We will provide you with a virtual rubber duckie on your screen. Please state ALL your thoughts out loud. Do not just think your thoughts, but explicitly voice them. Really try to use the technique as extremely and thoroughly as possible. For the next ten minutes, the rubber duckie is your best friend. You are not being recorded.
   </p>
-  <h4><b>For the next task, please work only <u>with rubber duck debugging</u>!</b><h4>
+  <h4><b>For the next tasks, please work only <u>with rubber duck debugging</u>!</b><h4>
   <!--include a youtube video-->
   {% comment %} <iframe
     width="560"
