--- a/duck_exp/duck_code_editor/templates/duck_code_editor/survey.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/survey.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <h2>Rate the previous task</h2>
+  <h2>Post-Study survey</h2>
   <form method="post" action="">
     {% csrf_token %}
     <div class="likert-question">
