--- a/duck_exp/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
+++ b/duck_exp/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
@@ -9,7 +9,7 @@
     just because you are participating in an experiment.
   </p>
 
-  <h4><b>For the next task, please work in <u>absolute silence</u>!</b><h4>
+  <h4><b>For the next tasks, please work in <u>absolute silence</u>!</b><h4>
   <form method="post" value="duck" action="">
     {% csrf_token %}
     <button
