--- a/duck_exp/templates/duck_exp/base.html
+++ b/duck_exp/templates/duck_exp/base.html
@@ -38,5 +38,12 @@
       crossorigin="anonymous"
     ></script>
     <div id="content">{% block content %}{% endblock %}</div>
+    {% if student_id %}
+    <div style="position: absolute; top: 10px; right: 10px; color: lightgray;">
+      <small>
+        Student ID: {{ student_id }}
+      </small>
+    </div>
+    {% endif %}
   </body>
 </html>
